--- a/.github/workflows/wasmedge-latest.yml
+++ b/.github/workflows/wasmedge-latest.yml
@@ -1,16 +1,14 @@
 name: "WasmEdge Latest"
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  group: WasmEdge-Latest-${{ github.head_ref || github.ref }}-${{ github.event_name }}
   cancel-in-progress: true
 
 on:
   schedule:
     - cron: "7 21 * * *"
-  push:
-    tags: [ "v[0-9]+.[0-9]+.[0-9]+*" ]
-    branches:
-      - "dev/workflow*"
+  workflow_call:
+  workflow_dispatch:
 
 jobs:
   prepare:
