--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,7 +14,7 @@ updates:
       interval: "weekly"
       day: "tuesday"
       time: "18:00"
-      timezone: "CST"
+      timezone: "Asia/Taipei"
     groups:
       actions:
         patterns:
