--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,17 +8,14 @@
 
 version: 2
 updates:
-  - package-ecosystem: "github-actions" # See documentation for possible values
-    directory: "/.github" # Location of package manifests
+  - package-ecosystem: "github-actions"
+    directory: "/"
     schedule:
       interval: "weekly"
       day: "tuesday"
-      time: "18:00"
+      time: "23:00"
       timezone: "Asia/Taipei"
     groups:
-      actions:
+      github-actions:
         patterns:
-          - "actions/*"
-      docker:
-        patterns:
-          - "docker/*"
+          - "*"
